@@ -57,3 +57,9 @@
  - when adding SSL, plugins that modify httpd.conf need to update the SSL
    virtualhost too (for filip)
 	- also, any ServerAlias for the alias domains need to be added
+	- just copy from non-ssl vhost
+
+ - mass upgrade on installed scripts page
+
+ - 'nice to have' PHP modules, like mcrypt for phpmyadmin
+
