@@ -619,3 +619,4 @@ Updated the modify-spam.pl program to add the --use-clamscan and --use-clamdscan
 When a virtual server with a website and private IP address is deleted, any Listen directives added for its IP are removed from the Apache configuration.
 Added a Module Config option to change the default SSL key size, and increased the default to 1024 bits.
 Added Module Config options for choosing different locations for servers' SSL certificate and key files.
+The PHP module mcrypt is now only recommended when installing phpMyAdmin, but not strictly required.
